# about

./: 404.html  index.html  sitemap.xml
blog/: index.html
blog/context-engineering-deep-dive-part-1-user-intent-prompting/code/: 3_chain_of_thought.py  4_role_playing_prompts.py  5_constraint_based_prompting.py  6_structured_output.py  pyproject.toml
blog/context-engineering-deep-dive-part-1-user-intent-prompting/code/llm_response/: 1_system_vs_user_prompts.md  2_few_shot_learning.md  3_chain_of_thought.md  4_role_playing_prompts.md  5_constraint_based_prompting.md
blog/internal/blog-post-template/: index.html
blog/internal/context-engineering-deep-dive-part-1-user-intent-prompting/: index.html
blog/internal/context-engineering-deep-dive-part-2-agents-reasoning/: index.html
blog/internal/context-engineering-deep-dive-part-3-rag-systems/: index.html
blog/internal/context-engineering-deep-dive-part-4-action-tools/: index.html
blog/internal/context-engineering-deep-dive-part-5-memory-systems/: index.html
blog/internal/context-engineering-modern-llm-ecosystem/: index.html
content/blog/: _index.md
css/: 404.css  author-cards.css
js/: author-cards.js  related-articles.js
static/css/: 404.css  article.css  code-example.css  quote.css  related-articles.css  style.css  tip.css
static/js/: 404.js  script.js
templates/: 404.html  blog.html  blog_page.html  index.html
templates/partials/: author_cards.html  related-articles.html
templates/shortcodes/: code_example.html  context_diagram.html  quote.html  stacked_chart.html  tip.html
(+15 files in other folders)
