[project]
name = "prompt-engineering-examples"
version = "0.1.0"
description = "Code examples for Context Engineering Deep Dive Part 1: User Intent & Prompting"
authors = [
    {name = "Dat Nguyen", email = "datnguyen.it09@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "ISC", "PIE", "RSE", "SIM", "TID", "ARG", "PTH", "ERA", "PGH", "RUF"]
ignore = ["E501", "T201"]  # T201: print statements are needed for demo scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"